[package]
name = "quant-mini"
version = "0.1.0"
edition = "2021"
description = "Rust mini low-latency quant project: Binance WS -> MA strategy -> paper trading -> simple metrics"
license = "MIT"
authors = ["You <you@example.com>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
clap = { version = "4.5", features = ["derive"] }
hdrhistogram = "7"
axum = "0.7"
once_cell = "1.19"
anyhow = "1.0"
